# mcp.agent

./: .env.sample  README.md  explanation.md  pyproject.toml  requirements.txt  todo.md
docs/: DEV.md  INTRO.md  LIMITATIONS.md  MARKETING.md  MARKETING110.md  PITCH.md  PRODUCTION.md  TECHNICAL.md  USAGE.md
mcp_agent/: __init__.py  __main__.py  bq_poller.py  cli.py  context.py  jobstore.py  server.py  utils.py
mcp_agent/gcp_tools/: __init__.py  base.py  bigquery.py  storage.py
